Fix AlphaBeta Introduce correct quiescence search Introduce transposition tables Add tests Misc. enhancements and fixes